Added Mac launch settings